@@ -2,6 +2,7 @@ from zeit.cms.i18n import MessageFactory as _
 from zeit.content.article.edit.browser.form import FormFields
 import zeit.edit.browser.form
 import zeit.push.browser.form
+import zope.formlib.form
 
 
 class Container(zeit.edit.browser.form.FoldableFormGroup):
@@ -19,6 +20,8 @@ class Social(zeit.push.browser.form.SocialBase,
     FormFieldsFactory = FormFields
     form_fields = FormFieldsFactory()
 
-    def applyChanges(self, data):
+    @zope.formlib.form.action(
+        _('Apply'), condition=zope.formlib.form.haveInputWidgets)
+    def handle_edit_action(self, action, data):
         self.applyAccountData(self.context, data)
-        return super(Social, self).applyChanges(data)
+        super(Social, self).handle_edit_action.success(data)
