@@ -16,6 +16,9 @@ zeit.content.article changes
 - Fix validation rule that checks for unpublished images, which broke due to
   the introduction of reference objects for VIV-305.
 
+- Use apply action from zope as hook instead of applyChanges hook that is not
+  present in inline forms (VIV-516).
+
 
 3.6.4 (2014-10-21)
 ------------------
